Added a readme and basic help

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 unorganized-notes.txt
 Digital Art - Sem. 1.md
-files/geneve_original.png
-files/ffmpegout.png
-files/yverdon_original.png
+files
+maps
